@@ -149,7 +149,7 @@ T_MEMCACHED
             /* take (sub)class name to use from class_sv if appropriate */
             if (class_sv && SvOK(class_sv) && sv_derived_from(class_sv, classname))
                 classname = (SvROK(class_sv)) ? sv_reftype(class_sv, 0) : SvPV_nolen(class_sv);
-            sv_setsv($arg, newRV_noinc((SV*)hv));
+            sv_setsv($arg, sv_2mortal(newRV_noinc((SV*)hv)));
             (void)sv_bless($arg, gv_stashpv(classname, TRUE));
 
             /* allocate an lmc_state struct and attach via MEMCACHED_CALLBACK_USER_DATA */
